--- a/index.html
+++ b/index.html
@@ -1,10 +1,41 @@
 <!doctype html>
-<html lang="en">
+<html lang="ang">
   <head>
+    <meta name="language" content="ar, en" />
+    <meta name="Content-Language" content="ar, en" />
+
+    <!-- Prevent clickjacking -->
+  <meta http-equiv="X-Frame-Options" content="DENY">
+
+  <!-- Prevent content-type sniffing -->
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+
+  <!-- Force HTTPS if you're using a service like Netlify or Vercel -->
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <!-- Page Description (for search engines and social media previews) -->
+<meta name="description" content="دوري بوغانيم لكرة القدم - تجربة رياضية فريدة تجمع الفرق والمجتمعات في منافسة ملهمة. تابع النتائج، الفرق، والفعاليات." />
+
+<!-- Keywords (optional but useful) -->
+<meta name="keywords" content="دوري, كرة القدم, بوغانيم, فرق, نتائج, بطولة, رياضة" />
+
+<!-- Author -->
+<meta name="author" content="جمعية بوغانيم الرياضية" />
+
+<!-- Open Graph (for social media) -->
+<meta property="og:title" content="Foot-Boughanim - دوري كرة القدم" />
+<meta property="og:description" content="تابع أحداث دوري بوغانيم لكرة القدم وشارك في أجواء رياضية مميزة." />
+<meta property="og:image" content="/icon.png" />
+<meta property="og:type" content="website" />
+<!-- Arabic - Morocco (default) -->
+<meta property="og:locale" content="ar_MA" />
+<!-- English (as alternate) -->
+<meta property="og:locale:alternate" content="en_US" />
+<meta property="og:url" content="https://foot-boughanim.vercel.app" />
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foot-ball</title>
+    <title>Foot-boughanim</title>
   </head>
   <body>
     <div id="root"></div>
